<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.spanishgrammarapp.ResourcesActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alphabet"
        android:id="@+id/button_alphabet"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbers"
        android:id="@+id/button_numbers"
        android:layout_below="@+id/button_alphabet"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:id="@+id/button_days"
        android:layout_below="@+id/button_numbers"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar"
        android:id="@+id/button_calendar"
        android:layout_below="@+id/button_days"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holidays"
        android:id="@+id/button_holidays"
        android:layout_below="@+id/button_calendar"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seasons_months"
        android:id="@+id/button_seasons_months"
        android:layout_below="@+id/button_holidays"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/button_time"
        android:layout_below="@+id/button_seasons_months"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
