<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn"
        android:id="@+id/button_learn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="learnActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice"
        android:id="@+id/button_practice"
        android:layout_below="@+id/button_learn"
        android:layout_centerHorizontal="true"
        android:onClick="practiceActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revise"
        android:id="@+id/button_revise"
        android:layout_below="@+id/button_practice"
        android:layout_centerHorizontal="true"
        android:onClick="reviseActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resources"
        android:id="@+id/button_resources"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="resourcesActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glossary"
        android:id="@+id/button_glossary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="glossaryActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:id="@+id/button_credits"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="credits" />

</RelativeLayout>
